@startuml

title __SERVICE's Class Diagram__\n

  namespace com.vrush.microservices.consumer {
    namespace service {
      class com.vrush.microservices.consumer.service.BookingService {
          {static} - log : Logger
          + BookingService()
          + save()
      }
    }
  }
  

  namespace com.vrush.microservices.consumer {
    namespace service {
      class com.vrush.microservices.consumer.service.RoomService {
          {static} - log : Logger
          + RoomService()
          + findAll()
          + findAllAvailableRooms()
          + findById()
      }
    }
  }
  

  com.vrush.microservices.consumer.service.BookingService o-- com.vrush.microservices.consumer.clients.BookingClient : bookingClient
  com.vrush.microservices.consumer.service.RoomService o-- com.vrush.microservices.consumer.clients.SearchingClient : searchingClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
